using DDD.Domain.Exceptions;

namespace DDD.Domain.Helpers {
    public static class Guard {
        public static void IsNull(object o,string message)          {
            if (o == null) {
                throw new InputException(message);
            }
        }
    }
}
